<?php

use Illuminate\Support\Facades\Schema;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Database\Migrations\Migration;

class AlterTables extends Migration {

  public function up() {
    $this->comments();
    $this->posts();
    $this->likes();
  }
  
  private function comments() {
    Schema::table('comments', function (Blueprint $table) {
      $table->foreign('user_id')->references('id')->on('users');
      $table->foreign('post_id')->references('id')->on('posts');
    });
  }
  
  private function posts() {
    Schema::table('posts', function (Blueprint $table){
      $table->foreign('user_id')->references('id')->on('users');
    });
  }
  
  private function likes() {
    Schema::table('likes', function (Blueprint $table) {
      $table->foreign('user_id')->references('id')->on('users');
      $table->foreign('post_id')->references('id')->on('posts');
    });
  }

  public function down() {
    Schema::dropIfExists('comments');
    Schema::dropIfExists('posts');
    Schema::dropIfExists('users');
  }

}
